--- a/app/src/main/res/layout/activity_list_post2.xml
+++ b/app/src/main/res/layout/activity_list_post2.xml
@@ -21,14 +21,49 @@
             android:layout_height="match_parent">
 
 
+            <LinearLayout
+                android:id="@+id/linearLayout5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view6">
+
+                <TextView
+                    android:id="@+id/titleTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/casablanca"
+                    android:text="پست جدید"
+                    android:textColor="@color/blue_900"
+                    android:textSize="18sp" />
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="1"
+                    android:background="@color/blue_900"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </LinearLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout5"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/blue_grey_50"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/view6">
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
 
 
                 <TextView
@@ -40,7 +75,6 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp"
                     android:fontFamily="@font/iransans"
                     android:text="@string/noData"
                     android:textColor="@color/gray"
@@ -49,8 +83,7 @@
                     app:layout_constraintEnd_toEndOf="@+id/View"
                     app:layout_constraintHorizontal_bias="0.486"
                     app:layout_constraintStart_toStartOf="@+id/View"
-                    app:layout_constraintTop_toBottomOf="@+id/view14"
-                    app:layout_constraintVertical_bias="0.56" />
+                    app:layout_constraintTop_toTopOf="@+id/View" />
 
                 <View
                     android:id="@+id/view14"
@@ -84,7 +117,9 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="32dp"
+                    android:clipToPadding="false"
                     android:layoutDirection="rtl"
+                    android:paddingBottom="30dp"
                     android:scrollbars="none"
                     android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
