--- a/app/src/main/res/layout/viewholder_attach.xml
+++ b/app/src/main/res/layout/viewholder_attach.xml
@@ -27,6 +27,7 @@
             android:fontFamily="@font/iranyekanmedium"
             android:gravity="center_vertical"
             android:paddingStart="10dp"
+            android:singleLine="true"
             android:text="گزینه 1"
             android:textAlignment="viewStart"
             android:textColor="@color/blue_900"
